# instagrapi

./: .bandit  .flake8  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dherik insta  FORK_README.md  LICENSE  OLD_README.md  Pipfile  README.md  README2.md  SECURITY.md  _temp2.py  _temp3.py  _temp4.py  _temp5.py  cool_down_conf.json  docker-compose.yml  find_stone_game.html  instabot.py  mkdocs.yml  package.json  pyproject.toml  reg.py  requirements-doc.txt  requirements-docs.txt  requirements-test.txt  requirements.txt  setup.py  t.py  test.py  test_clips_metadata.py  test_type_improvements.py  tests.py  versions.json  (+1 more)
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/actions/build-dist/: action.sh  action.yml
.github/actions/install-dependencies/: action.sh  action.yml
.github/actions/publish-docs-with-mike/: action.sh  action.yml  configure_git_user.sh  update_docs_for_version.sh
.github/actions/verify-wheel/: action.sh  action.yml  test_module_import.py
.github/workflows/: codeql-analysis.yml  live-account-tests.yml  pr.yaml  publish.yml  python-package.yml  release.yaml
ci-tools/: install-poetry.sh  pre-commit-requirements.txt  pre-commit-style.yapf  pre-commit.yml  pypi-preflight-check.py
classes/: botconf.py  cooldown.py  createdevice.py  errors.py  feed.py  followusers.py  getfromhashtag.py  init.py  media.py  newfollowers.py  stats.py  unfollowusers.py
client/: __init__.py  account.py  album.py  config.py  extractors.py  igtv.py  public.py
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/development-guide/: index.html
dev/exceptions/: index.html
dev/getting-started/: index.html
dev/search/: search_index.json
dev/usage-guide/account/: index.html
dev/usage-guide/best-practices/: index.html
dev/usage-guide/challenge_resolver/: index.html
docker/: devbox.dockerfile  lint.sh  lock_requirements.sh  run_tests.sh
docker/entrypoints/: entrypoint.sh  run_tests.sh
docs/: development-guide.md  exceptions.md  getting-started.md  httpcloak.md  index.md
docs/usage-guide/: account.md  best-practices.md  challenge_resolver.md  collection.md  comment.md  direct.md  examples.md  fundamentals.md  handle_exception.md  hashtag.md  highlight.md  insight.md  interactions.md  location.md  media.md  notes.md  notification.md  public-transport.md  pydroid.md  realtime.md  search.md  story.md  termux.md  totp.md  track.md  types.md  user.md
examples/: README.md  _common.py  advaced_searcher.py  bot.py  challenge_resolvers.py  create_sticker.py  debug_direct_thread.py  direct_message.py  download_all_medias.py  download_user_media.py  handle_exception.py  load_session_cookie.py  location_search.py  medias.py  monitor_user_content.py  next_proxy.py  public_lookup.py  session_login.py  upload_media.py  upload_story.py
examples/photos/: upload_photos.py
instadevice/: device.py  useragents.txt
instagrapi/: __init__.py  account.py  album.py  auth.py  challenge.py  collection.py  config.py  country_details.json  decorators.py  direct.py  exceptions.py  extractors.py  hashtag.py  igtv.py  image_util.py  insights.py  instagrapi_types.py  location.py  media.py  password.py  photo.py  private.py  public.py  signup.py  story.py  types.py  user.py  utils.py  validators.py  video.py  video_util.py  zones.py
instagrapi/mixins/: RanDeviceGen.py  account.py  album.py  auth.py  bloks.py  captcha.py  challenge.py  clip.py  collection.py  comment.py  direct.py  explore.py  fbsearch.py  fundraiser.py  graphql.py  hashtag.py  highlight.py  igtv.py  insights.py  location.py  media.py  multiple_accounts.py  note.py  notification.py  password.py  photo.py  private.py  public.py  quicksnap.py  realtime.py  share.py  signup.py  story.py  timeline.py  totp.py  track.py  user.py  video.py
instagrapi/realtime/: __init__.py  client.py  fbns.py  mqttot.py
instagrapi/utils/: __init__.py  auth.py  ids.py  iterators.py  logging.py  serialization.py  timing.py  upload.py  validation.py  video.py
instagrapi_code/: .dockerignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  SECURITY.md  mkdocs.yml  requirements.txt
instagrapi_code/docker/: devbox.dockerfile
instagrapi_code/docs/: getting-started.md
instagrapi_code/examples/: challenge_resolvers.py  next_proxy.py
instagrapi_code/instagrapi/: exceptions.py  extractors.py  types.py  utils.py
src/: client.ts  exceptions.ts  types.ts  utils.ts
src/mixins/: auth.ts  hashtag.ts  user.ts
tests/: __init__.py  auth.test.ts  hashtag.test.ts  helpers.py  test_legacy.py  user.test.ts
tests/live/: test_account.py  test_archive.py  test_client.py  test_collection.py  test_comments.py  test_cutout_sticker.py  test_device.py  test_direct.py  test_download.py  test_fbns.py  test_fbsearch.py  test_hashtag.py  test_hashtag_search.py  test_highlight.py  test_insights.py  test_location.py  test_media.py  test_notes.py  test_public.py  test_quicksnap.py  test_realtime.py  test_sessionid.py  test_share.py  test_signup.py  test_story.py  test_timeline.py  test_totp.py  test_track.py  test_upload.py  test_user.py
tests/regression/: test_account.py  test_archive.py  test_auth_story.py  test_bloks.py  test_challenge.py  test_clip.py  test_collection.py  test_comments.py  test_current_app_profile.py  test_direct.py  test_docs_model_reference.py  test_download.py  test_examples.py  test_extractors.py  test_fbns.py  test_fbsearch.py  test_hardening.py  test_hashtag.py  test_helpers.py  test_insights.py  test_location.py  test_media.py  test_notes.py  test_packaging.py  test_public.py  test_public_literal_types.py  test_public_transport.py  test_quicksnap.py  test_realtime.py  test_request_logging.py  test_signup.py  test_story.py  test_story_configure.py  test_tempfile.py  test_timeline.py  test_tls_verify.py  test_track.py  test_upload.py  test_user.py  test_utils_package.py  (+1 more)
util/mkdocs-redirects/: setup.py
util/mkdocstrings_patch_type_aliases/: setup.py
(+44 files in other folders)
